contact page: fix zero-height map on safari

--- a/css/main.scss
+++ b/css/main.scss
@@ -2944,6 +2944,10 @@ h3 {
     }
   }
   .right {
+    position: relative;
+    #map {
+      position: absolute;
+    }
     @media only screen and (max-width: 1023px) {
       height: 500px;
     }
